Loop short-circuit optimization